# scarletclaw

./: .gitignore  PERFORMANCE_REVIEW.md
scarletclaw/: Cargo.toml  README.md
scarletclaw/src/: agent.rs  channels.rs  crimson.rs  engine.rs  gateway.rs  lib.rs  main.rs  mamba.rs  memory.rs  models.rs  react.rs  sandbox.rs  scheduler.rs  sqlite_memory.rs  tensor.rs  tests.rs  tools.rs  transformer.rs  wasm.rs
skills/skill-creator/scripts/: init_skill.py
src/browser/: browser-utils.test.ts
src/cli/: help-format.test.ts
src/secrets/: audit.ts  auth-store-paths.ts  storage-scan.ts
