[package]
name = "scarletclaw"
version = "0.1.0"
edition = "2024"
rust-version = "1.85.0"

[dependencies]
anyhow = "1.0.102"
async-trait = "0.1.89"
axum = "0.8.8"
clap = { version = "4.5.60", features = ["derive"] }
rayon = "1.11.0"
rusqlite = { version = "0.38.0", features = ["bundled"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tokio = { version = "1.50.0", features = ["full"] }
tokio-stream = "0.1.18"
uuid = { version = "1.22.0", features = ["v4"] }
wasmtime = "34.0.2"
